Add new lines and derive attribute to Rust learning notebook

--- a/rust-learning-note.ipynb
+++ b/rust-learning-note.ipynb
@@ -136,6 +136,7 @@
     }
    ],
    "source": [
+    "\n",
     "(1..5) //左闭右开 1~4\n",
     "(1..=5)//闭区间   1~5\n",
     "//rev()方法 反转顺序\n",
@@ -242,6 +243,7 @@
    "outputs": [],
    "source": [
     "//链表\n",
+    "#[derive(Debug)]\n",
     "struct ListNode {\n",
     "\tval:i32,\n",
     "\tnext:Option<Box<ListNode>>\n",
