Update execution counts and enhance Rust learning notebook with additional examples

--- a/rust-learning-note.ipynb
+++ b/rust-learning-note.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "da8d92e2",
    "metadata": {
     "vscode": {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7e37fb55",
    "metadata": {
     "vscode": {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cd664983",
    "metadata": {
     "vscode": {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "dc28c7d0",
    "metadata": {
     "vscode": {
@@ -127,11 +127,11 @@
      "traceback": [
       "(1..5) //左闭右开 1~4",
       "(1..=5)//闭区间   1~5",
-      "\u001b[91m^^^^^^^\u001b[0m \u001b[94mcall expression requires function\u001b[0m",
+      "^^^^^^^ call expression requires function",
       "(1..5) //左闭右开 1~4",
-      "\u001b[91m^^^^^^\u001b[0m \u001b[94merror: expected function, found `std::ops::Range<{integer}>`\u001b[0m",
+      "^^^^^^ error: expected function, found `std::ops::Range<{integer}>`",
       "expected function, found `std::ops::Range<{integer}>`",
-      "\u001b[1mhelp\u001b[0m: consider using a semicolon here to finish the statement\n\n;"
+      "help: consider using a semicolon here to finish the statement\n\n;"
      ]
     }
    ],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "61665fc5",
    "metadata": {
     "vscode": {
@@ -339,9 +339,9 @@
     "\n",
     "---\n",
     "\n",
-    "**Vec  动态（可变长）数组**\n",
+    "### Vec  动态（可变长）数组\n",
     "\n",
-    "连续内存块，存储同类型元素，索引"
+    "连续内存块，存储同类型元素"
    ]
   },
   {
@@ -355,8 +355,322 @@
    },
    "outputs": [],
    "source": [
-    "let mut v:Vec<i32> = Vec::new();"
+    "let mut v: Vec<i32> = Vec::new();               //创建空Vec\n",
+    "let mut v: Vec<i32> = Vec::with_capacity(10);   //创建容量为10的Vec"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c59685e7",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "容量是为了存储元素所分配的内存空间量\n",
+    "长度是数组中实际的元素个数\n",
+    "\n",
+    "动态数组长度超过容量时，需要重新分配更大容量"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffa7edd9",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "//使用vec!宏，在创建Vec的同时进行初始化，并根据初始值自动推断类型\n",
+    "let mut v: Vec<i32> = vec![]; //空数组，没有元素，无法推断，需要声明类型\n",
+    "\n",
+    "let mut v = vec![1, 2, 3]; //自动推断为i32类型\n",
+    "\n",
+    "let mut v = vec![0; 10]; //创建长度为10，元素为0的Vec"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acd0cd95",
+   "metadata": {},
+   "source": [
+    "**动态数组的修改**\n",
+    "\n",
+    "\n",
+    "使用push方法在数组尾部添加元素\n",
+    "\n",
+    "修改指定索引元素值\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2039f881",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 5, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "let mut v:Vec<i32> = Vec::new(); //声明空Vec\n",
+    "\n",
+    "v.push(1); //添加元素\n",
+    "v.push(2);\n",
+    "v.push(3);\n",
+    "println!(\"{:?}\",v); //输出[1,2,3]\n",
+    "\n",
+    "v[1]=5; //修改元素\n",
+    "println!(\"{:?}\",v); //输出[1,5,3]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b098743",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "使用pop方法删除元素\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2210d48d",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e:Some(3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "let mut v:Vec<i32> = Vec::with_capacity(10); //声明容量为10的Vec\n",
+    "v.push(1); //添加元素\n",
+    "v.push(2);\n",
+    "v.push(3);\n",
+    "println!(\"e:{:?}\",v.pop()); //弹出最后一个元素，输出Some(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e919f86c",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "source": [
+    "使用remove方法删除并返回元素，同时将其后面所有元素左移。索引越界将导致错误。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a7a2a5fe",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e:2\n"
+     ]
+    }
+   ],
+   "source": [
+    "let mut v:Vec<i32> = Vec::with_capacity(10); //声明容量为10的Vec\n",
+    "v.push(1); //添加元素\n",
+    "v.push(2);\n",
+    "v.push(3);\n",
+    "println!(\"e:{:?}\",v.remove(1)); //移除索引为1的元素，输出2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad7552cd",
+   "metadata": {},
+   "source": [
+    "动态数组的访问"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "747ff516",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e:3\n"
+     ]
+    }
+   ],
+   "source": [
+    "let v = vec![1, 2, 3];\n",
+    "\n",
+    "println!(\"e:{}\", v[2]); //使用 实例名[索引] 访问元素\n",
+    "\n",
+    "//println!(\"e:{}\", v[10]);//越界访问，panic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "238cade2",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e:Some(3)\n",
+      "e:None\n"
+     ]
+    }
+   ],
+   "source": [
+    "let v = vec![1, 2, 3];\n",
+    "println!(\"e:{:?}\", v.get(2)); //使用get方法访问元素 返回Some(3)\n",
+    "\n",
+    "println!(\"e:{:?}\", v.get(10)); //越界访问，返回None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "703f6d98",
+   "metadata": {},
+   "source": [
+    "for遍历所有元素"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "cf86c4b2",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n",
+      "150\n",
+      "250\n",
+      "350\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "let v = vec![10, 20, 30];\n",
+    "for i in v {\n",
+    "    println!(\"{}\", i);\n",
+    "}\n",
+    "\n",
+    "let mut v = vec![100, 200, 300];\n",
+    "for i in &mut v {\n",
+    "    *i += 50;\n",
+    "    println!(\"{}\", i);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b098cbe",
+   "metadata": {},
+   "source": [
+    "### VecDeque 双端队列\n",
+    "\n",
+    "同时具有栈（先进后出）和队列（先进先出）特征，适用于只能在队列两端添加或删除元素操作的应用场景。\n",
+    "\n",
+    "定义在std::collections中"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "9c2ce8fc",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "use std::collections::VecDeque;\n",
+    "let mut v:VecDeque<i32> = VecDeque::new(); //声明空VecDeque\n",
+    "let mut v:VecDeque<i32> = VecDeque::with_capacity(10); //声明容量为10的VecDeque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5404af2",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
