Update execution counts and enhance Rust learning notebook with VecDeque examples

--- a/rust-learning-note.ipynb
+++ b/rust-learning-note.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "da8d92e2",
    "metadata": {
     "vscode": {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "7e37fb55",
    "metadata": {
     "vscode": {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "cd664983",
    "metadata": {
     "vscode": {
@@ -112,37 +112,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "dc28c7d0",
    "metadata": {
     "vscode": {
      "languageId": "rust"
     }
    },
-   "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "expected function, found `std::ops::Range<{integer}>`",
-     "output_type": "error",
-     "traceback": [
-      "(1..5) //左闭右开 1~4",
-      "(1..=5)//闭区间   1~5",
-      "^^^^^^^ call expression requires function",
-      "(1..5) //左闭右开 1~4",
-      "^^^^^^ error: expected function, found `std::ops::Range<{integer}>`",
-      "expected function, found `std::ops::Range<{integer}>`",
-      "help: consider using a semicolon here to finish the statement\n\n;"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
-    "(1..5) //左闭右开 1~4\n",
-    "(1..=5)//闭区间   1~5\n",
+    "//(1..5) //左闭右开 1~4\n",
+    "//(1..=5)//闭区间   1~5\n",
     "//rev()方法 反转顺序\n",
-    "(1..5).rev();  // 4 3 2 1\n",
+    "//(1..5).rev();  // 4 3 2 1\n",
     "//sum()方法 求和\n",
-    "(1..=5).sum(); // 15"
+    "//(1..=5).sum(); // 15"
    ]
   },
   {
@@ -152,7 +137,7 @@
    "source": [
     "## 2.3 复合数据类型\n",
     "\n",
-    "**元组 Tuple**\n",
+    "### **元组 Tuple**\n",
     "\n",
     "用小括号放在一起，长度固定，元素间逗号分隔。\n",
     "\n",
@@ -170,16 +155,7 @@
      "languageId": "rust"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "The value of y is: 6.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "let tup: (i32, f64, u8) = (500, 6.4, 1);\n",
     "let tup2 = (7.7, (false, 10));\n",
@@ -194,7 +170,7 @@
    "id": "0f79f5a0",
    "metadata": {},
    "source": [
-    "**数组 Array**\n",
+    "### **数组 Array**\n",
     "\n",
     "使用“数组名[索引]”访问；\n",
     "\n",
@@ -203,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "8ac741c7",
    "metadata": {
     "vscode": {
@@ -224,7 +200,9 @@
    "source": [
     "> 数组使用无效值索引：导致**运行时**（*runtime*）错误\n",
     "\n",
-    "**结构体**\n",
+    "\n",
+    "\n",
+    "### **struct 结构体**\n",
     "\n",
     "用“name:type”定义字段；字段默认不可变，要求明确指定数据类型，以逗号分隔，最后一个逗号可省略。\n",
     "\n",
@@ -233,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "6ea58454",
    "metadata": {
     "vscode": {
@@ -270,7 +248,7 @@
    "id": "33116b30",
    "metadata": {},
    "source": [
-    "**枚举类型**\n",
+    "### **enum 枚举类型**\n",
     "\n",
     "使用enum关键字和自定义命名来定义\n",
     "\n",
@@ -281,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "7f7c54d8",
    "metadata": {
     "vscode": {
@@ -346,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0677f439",
    "metadata": {
     "vscode": {
@@ -374,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ffa7edd9",
    "metadata": {
     "vscode": {
@@ -388,7 +366,7 @@
     "\n",
     "let mut v = vec![1, 2, 3]; //自动推断为i32类型\n",
     "\n",
-    "let mut v = vec![0; 10]; //创建长度为10，元素为0的Vec"
+    "let mut v = vec![0; 10]; //创建长度为10，元素为0的Vec\n"
    ]
   },
   {
@@ -407,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "2039f881",
    "metadata": {
     "vscode": {
@@ -419,13 +397,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[1, 2, 3]\n",
       "[1, 5, 3]\n"
      ]
     }
@@ -439,8 +411,7 @@
     "println!(\"{:?}\",v); //输出[1,2,3]\n",
     "\n",
     "v[1]=5; //修改元素\n",
-    "println!(\"{:?}\",v); //输出[1,5,3]\n",
-    "\n"
+    "println!(\"{:?}\",v); //输出[1,5,3]"
    ]
   },
   {
@@ -456,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "2210d48d",
    "metadata": {
     "vscode": {
@@ -494,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "a7a2a5fe",
    "metadata": {
     "vscode": {
@@ -528,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "747ff516",
    "metadata": {
     "vscode": {
@@ -554,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "238cade2",
    "metadata": {
     "vscode": {
@@ -588,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "cf86c4b2",
    "metadata": {
     "vscode": {
@@ -614,7 +585,7 @@
        "()"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "9c2ce8fc",
    "metadata": {
     "vscode": {
@@ -656,14 +627,76 @@
    "outputs": [],
    "source": [
     "use std::collections::VecDeque;\n",
-    "let mut v:VecDeque<i32> = VecDeque::new(); //声明空VecDeque\n",
+    "let mut v:VecDeque<i32> = VecDeque::new(); //创建空VecDeque\n",
     "let mut v:VecDeque<i32> = VecDeque::with_capacity(10); //声明容量为10的VecDeque"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5404af2",
+   "metadata": {},
+   "source": [
+    "修改VecDeque的常见操作由添加元素，修改指定索引和删除元素"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d93d54a6",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 1, 1, 2, 3]\n",
+      "[3, 5, 1, 1, 2, 3]\n",
+      "e:Some(3)\n",
+      "e:Some(3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "use std::collections::VecDeque;\n",
+    "let mut v: VecDeque<u32> = VecDeque::new(); //创建空VecDeque\n",
+    "v.push_back(1); //尾部添加元素\n",
+    "v.push_back(2);\n",
+    "v.push_back(3); \n",
+    "\n",
+    "v.push_front(1); //头部添加元素\n",
+    "v.push_front(2);\n",
+    "v.push_front(3);\n",
+    "println!(\"{:?}\",v); //输出Deque([3, 2, 1, 1, 2, 3])\n",
+    "\n",
+    "v[1]=5; //修改元素\n",
+    "println!(\"{:?}\",v); //输出Deque([3, 5, 1, 1, 2, 3])\n",
+    "\n",
+    "println!(\"e:{:?}\",v.pop_back()); //弹出尾部元素，输出Some(3)\n",
+    "println!(\"e:{:?}\",v.pop_front()); //弹出头部元素，输出Some(3)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5404af2",
+   "id": "ed42b050",
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bc5a59e",
    "metadata": {
     "vscode": {
      "languageId": "rust"
