--- a/rust-learning-note.ipynb
+++ b/rust-learning-note.ipynb
@@ -20,11 +20,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "da8d92e2",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "let     x:i8 = 1 ; //声明不可变变量\n",
@@ -63,11 +59,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "7e37fb55",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "let float1:f32 = 1.1;   //类型声明\n",
@@ -87,11 +79,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "cd664983",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "let t:bool = true; //显式声明\n",
@@ -114,11 +102,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "dc28c7d0",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -150,11 +134,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "61665fc5",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "let tup: (i32, f64, u8) = (500, 6.4, 1);\n",
@@ -181,11 +161,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "8ac741c7",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "let arr:[i32;5] = [1, 2, 3, 4, 5];\n",
@@ -213,11 +189,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "6ea58454",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//链表\n",
@@ -261,11 +233,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "7f7c54d8",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//无参数枚举类型\n",
@@ -326,11 +294,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "0677f439",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "let mut v: Vec<i32> = Vec::new();               //创建空Vec\n",
@@ -354,11 +318,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "ffa7edd9",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "//使用vec!宏，在创建Vec的同时进行初始化，并根据初始值自动推断类型\n",
@@ -385,23 +345,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2039f881",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3]\n",
-      "[1, 5, 3]\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "let mut v:Vec<i32> = Vec::new(); //声明空Vec\n",
     "\n",
@@ -427,22 +374,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2210d48d",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "e:Some(3)\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "let mut v:Vec<i32> = Vec::with_capacity(10); //声明容量为10的Vec\n",
     "v.push(1); //添加元素\n",
@@ -465,22 +400,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a7a2a5fe",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "e:2\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "let mut v:Vec<i32> = Vec::with_capacity(10); //声明容量为10的Vec\n",
     "v.push(1); //添加元素\n",
@@ -499,22 +422,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "747ff516",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "e:3\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "let v = vec![1, 2, 3];\n",
     "\n",
@@ -525,23 +436,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "238cade2",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "e:Some(3)\n",
-      "e:None\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "let v = vec![1, 2, 3];\n",
     "println!(\"e:{:?}\", v.get(2)); //使用get方法访问元素 返回Some(3)\n",
@@ -559,37 +457,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "cf86c4b2",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n",
-      "20\n",
-      "30\n",
-      "150\n",
-      "250\n",
-      "350\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "()"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "let v = vec![10, 20, 30];\n",
     "for i in v {\n",
@@ -617,13 +488,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "9c2ce8fc",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::collections::VecDeque;\n",
@@ -641,25 +508,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "d93d54a6",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 2, 1, 1, 2, 3]\n",
-      "[3, 5, 1, 1, 2, 3]\n",
-      "e:Some(3)\n",
-      "e:Some(3)\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "use std::collections::VecDeque;\n",
     "let mut v: VecDeque<u32> = VecDeque::new(); //创建空VecDeque\n",
@@ -676,34 +528,66 @@
     "println!(\"{:?}\",v); //输出Deque([3, 5, 1, 1, 2, 3])\n",
     "\n",
     "println!(\"e:{:?}\",v.pop_back()); //弹出尾部元素，输出Some(3)\n",
-    "println!(\"e:{:?}\",v.pop_front()); //弹出头部元素，输出Some(3)\n"
+    "println!(\"e:{:?}\",v.pop_front()); //弹出头部元素，输出Some(3)\n",
+    "//[5, 1, 1, 2]\n",
+    "println!(\"e:{:?}\",v.remove(1).unwrap()); //移除索引为1的元素，返回Some(3)\n",
+    "println!(\"e:{:?}\",v.remove(10)); //移除索引为10的元素，越界，返回None\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "ed42b050",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "println!(\"e:{:?}\", v[2]); //使用get方法访问元素 返回2\n",
+    "//println!(\"e:{:?}\", v[10]); //越界 panic\n",
+    "println!(\"e:{:?}\", v.get(2)); //使用get方法访问元素 返回Some(2)\n",
+    "println!(\"e:{:?}\", v.get(10)); //越界访问，返回None\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bc5a59e",
+   "metadata": {},
+   "source": [
+    "### 哈希表 Hashmap\n",
+    "\n",
+    "某种字典"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bc5a59e",
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "id": "60985b57",
+   "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36e557b2",
+   "metadata": {},
+   "source": [
+    "## 2.5 字符串\n",
+    "\n",
+    "字符串有两种，一种是固定长度的字符串字面量str，另一种是可变长度的字符串对象String\n",
+    "\n",
+    "内置的字符串类型是str，通常以引用的形式&str出现。&str是字符的集合，代表不可变的utf-8字符串引用，创建后无法追加或更改内容。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "371aba30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "let s1 = \"Hello,Rust!\"; //字符串字面量\n",
+    "let str = String::from(\"Hello,Rust!\"); //String类型，字符串对象\n",
+    "let s2 = str.as_str(); //String类型转&str类型\n"
+   ]
   }
  ],
  "metadata": {
@@ -721,7 +605,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "Rust",
+   "name": "rust",
    "pygment_lexer": "rust",
    "version": ""
   }
